# patchy_reionization_-anisotropic_cosmic_birefringence

./: .gitignore  AGENTS.md  HANDOFF.md  METHODOLOGICAL_NOTE.md  PAPER_NOTES.md  README.md  RESEARCH_LOG.md  main.py  patchy_reionization.py  pyproject.toml
scripts/: 01-check_feasibility.ipynb  01-check_feasibility.py  02-check_linearity.py  03-check_convergence.py  04-scan_rtau_needed.py  04a-scan_a_unit.py  04b-scan_rtau_from_aunit.py  05-visualize_phi_needed.ipynb  06-bound_cltautau_from_acb.ipynb  06-bound_cltautau_from_acb.py  07a-compute_phi_amp_max.py  07b-visualize_phi_amp_max.ipynb  08-sanity_check_ratio.py  08b-visualize_ratio_sanity.ipynb  09-check_normalization.py  09b-visualize_normalization.ipynb  10-check_constant_scaling.py  11-recompute_matched_scan.py  12-ratio_with_matched_scan.py  12b-visualize_matched_ratio.ipynb  13-acb_reinterpretation_with_matched.py  13b-visualize_acb_reinterpretation.ipynb  14-patchy_template_family_bound.py  14b-visualize_patchy_template_family.ipynb  15-a_reff_surrogate_bound.py  15b-visualize_a_reff_surrogate.ipynb  16-check_ds_figure_reproduction.py  16b-visualize_ds_figure_reproduction.ipynb  17-check_ds_figure_reproduction_corrected.py  17b-visualize_ds_figure_reproduction_corrected.ipynb  18-deltatau_variation_budget.py  18b-visualize_deltatau_variation_budget.ipynb  19-gbench_budget.py  19b-visualize_gbench_budget.ipynb  20-check_atau_normalization.py  20b-visualize_atau_normalization.ipynb  21-check_natural_unit_normalization.py  21b-visualize_natural_unit_normalization.ipynb  22-natural_unit_budget.py  (+18 more)
(+73 files in other folders)
