[project]
name = "patchyreionization"
version = "0.1.0"
description = "Numerical study of patchy-reionization contributions to anisotropic cosmic birefringence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
]

[project.scripts]
patchy-reionization = "main:main"
